// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and matches snapshot when user is logged in 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-153 makeStyles-container-150"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
    >
      <div
        class="MuiGrid-root makeStyles-userInfo-151 MuiGrid-item"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-289"
        >
          <img
            alt="user-12"
            class="MuiAvatar-img"
            src="/api/user/12/profile-pic"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
        >
          TEST
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-alignCenter"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          data-testid="logout-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            form.logout
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot when user is not logged in 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-4 makeStyles-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
    >
      <div
        class="MuiGrid-root makeStyles-userInfo-2 MuiGrid-item"
      />
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          data-testid="logout-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            form.logout
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
